--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     body {
       font-family: "Segoe UI", sans-serif;
-      background: url('C:\Users\joyvi\OneDrive\Pictures\custserv.png') no-repeat center center/cover;
+      background: url('"C:\Users\HP\Downloads\photo.jpg"') no-repeat center center/cover;
       height: 100vh;
       color: #fff;
     }
